--- a/index.html
+++ b/index.html
@@ -1,106 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>RL Travel Solution</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #f4f6f8;
-      color: #333;
-    }
-    header {
-      background: #0b5ed7;
-      color: #fff;
-      padding: 30px 20px;
-      text-align: center;
-    }
-    section {
-      padding: 30px 20px;
-      max-width: 900px;
-      margin: auto;
-    }
-    h2 {
-      color: #0b5ed7;
-      margin-bottom: 10px;
-    }
-    .card {
-      background: #fff;
-      padding: 20px;
-      margin-bottom: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
-    .btn {
-      display: inline-block;
-      background: #25D366;
-      color: #fff;
-      padding: 12px 18px;
-      text-decoration: none;
-      border-radius: 6px;
-      font-weight: bold;
-    }
-    footer {
-      background: #222;
-      color: #fff;
-      text-align: center;
-      padding: 15px;
-      font-size: 14px;
-    }
-    a { color: #0b5ed7; text-decoration: none; }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RL Travel Solution - Jawai Leopard Safari</title>
+    <style>
+        body { font-family: 'Arial', sans-serif; margin: 0; padding: 0; text-align: center; background-color: #f9f9f9; }
+        header { background-color: #2c3e50; color: white; padding: 40px 20px; }
+        .logo { width: 120px; border-radius: 50%; margin-bottom: 10px; border: 3px solid white; }
+        .content { padding: 40px; max-width: 900px; margin: auto; background: white; }
+        .gallery { display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; padding: 20px; }
+        .gallery img { width: 300px; height: 220px; object-fit: cover; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.2); }
+        h1 { margin: 10px 0; }
+        p { line-height: 1.6; color: #555; font-size: 18px; }
+    </style>
 </head>
 <body>
 
-<header>
-  <h1>RL Travel Solution</h1>
-  <p>Your Trusted Travel Partner</p>
-</header>
+    <header>
+        <img src="logo.png" alt="Logo" class="logo">
+        <h1>RL Travel Solution</h1>
+        <p>Expert Jawai Leopard & Jeep Safari Services</p>
+    </header>
 
-<section>
-  <div class="card">
-    <h2>About Us</h2>
-    <p>
-      RL Travel Solution provides reliable and affordable travel services.
-      We specialize in tour planning, vehicle booking, and personalized travel solutions.
-    </p>
-  </div>
+    <div class="content">
+        <h2>About Our Company</h2>
+        <p>
+            Welcome to <b>RL Travel Solution</b>. Hum Rajasthan ke Jawai Bera mein sabse adventurous aur safe <b>Leopard Safari</b> provide karte hain. 
+            Humari 4x4 Jeep Safari ke saath aap wild leopards, crocodiles, aur migratory birds ko bahut kareeb se dekh sakte hain. 
+            Humara anubhav aapki yatra ko yaadgar banayega.
+        </p>
 
-  <div class="card">
-    <h2>Our Services</h2>
-    <ul>
-      <li>Tour Packages</li>
-      <li>Taxi & Vehicle Booking</li>
-      <li>Corporate & Family Trips</li>
-      <li>Customized Travel Plans</li>
-    </ul>
-  </div>
+        <h2>Safari Gallery</h2>
+        <div class="gallery">
+            <img src="leopard.jpg" alt="Jawai Leopard">
+            <img src="jeep.jpg" alt="Safari Jeep">
+            <img src="leopard2.jpg" alt="Wild Leopard">
+        </div>
+    </div>
 
-  <div class="card">
-    <h2>Contact Us</h2>
-    <p><strong>Phone:</strong> +91 8956249170</p>
-    <p><strong>Email:</strong> rltravelsolution@gmail.com</p>
-    <p><strong>Office:</strong> Jawai Sumerpur, Rajasthan</p>
-
-    <p>
-      <a class="btn" href="https://wa.me/918956249170" target="_blank">
-        Chat on WhatsApp
-      </a>
-    </p>
-
-    <p>
-      <a href="https://www.google.com/maps/search/jawai+sumerpur" target="_blank">
-        📍 View on Google Map
-      </a>
-    </p>
-  </div>
-</section>
-
-<footer>
-  © 2026 RL Travel Solution. All Rights Reserved.
-</footer>
+    <footer style="padding: 20px; background: #2c3e50; color: white; margin-top: 20px;">
+        <p>© 2024 RL Travel Solution | Jawai Safari Specialist</p>
+    </footer>
 
 </body>
 </html>
